--- a/stylesheets/main.scss
+++ b/stylesheets/main.scss
@@ -20,7 +20,10 @@
 // 4. Layout-related sections
 @import
   'layout/header',
-  'layout/footer';
+  'layout/footer',
+  'layout/home',
+  'layout/puzzle',
+  'layout/solve';
 
 // 5. Components
 @import
