--- a/stylesheets/layout/_header.scss
+++ b/stylesheets/layout/_header.scss
@@ -1,3 +1,23 @@
 // -----------------------------------------------------------------------------
 // This file contains all styles related to the header of the site/application.
 // -----------------------------------------------------------------------------
+.header-home {
+	display: flex;
+	flex-direction: column;
+	justify-content: stretch;
+	align-items: stretch;
+ 	h4, p {
+ 		border-radius: $radius;
+ 		border-bottom: .2px inset white;
+ 		text-align: center;
+ 	}
+	
+
+}
+
+.headers {
+	width: 96vw;
+	margin: auto;
+	background: $light-grey;
+	border-radius: $radius;
+}
